@@ -13,6 +13,8 @@
 * DOC/USAGE, src/atari800.man, src/ui.c, src/sdl/video_gl.[ch]:
   Add option for disabling OpenGL Pixel Buffer Objects - on some hardware they
   decrease performance.
+* DOC/USAGE, src/atari800.man, src/ui.c, src/videomode.[ch]:
+  Add option for automatic detection of host screen aspect ratio.
 
 2011-04-04  James Wilkinson  <james@slor.net>
 * configure.ac, Makefile.in: maintain support for older compilers (DOS, BeOS)
